[tool.poetry]
name = "pycounts_kw"
version = "0.1.0"
description = "python package for text loading, cleaning and word counting"
authors = ["kellywujy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
